<resources>
    <string name="app_name">FriendNGo</string>
    <string name="preference_file_key">com.friendngo.scott.friendngo.KEY_FILE</string>
    <string name="token">token</string>
    <string name="title_activity_login">Sign in</string>
    <string name="no_messages">Getting Data From Server</string>
    <string name="spinner_title">Select Category</string>
    <string name="facebook_app_id">704534619705934</string>
    <string name="fb_login_protocol_scheme">fb704534619705934</string>
    <string name="django_client_id">CbTAAHkquN3sCySbUogG5hnurQBSNfzMcogUDB5S</string>
    <string name="django_client_secret">M7pRRTS7UiJKZrmdJbKoIp2FJhvfaMheBAvkefA6ApFi2VGhp00MjYCn2EK4kXnBaPj79SBuxmMPqxudNvjiHx8lKzgutV5PKbRgBzGrVjYomXP10nqWThJCZo50NJE1</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="POSITION_KEY">POSITION_KEY</string>
    <string name="VIEW_HOLDER_KEY">VIEW_HOLDER_KEY</string>
    <string name="title_activity_request">Request</string>
    <string name="home_icon_text">Map</string>
    <string name="list_icon_text">List</string>
    <string name="calendar_icon_text">Calendar</string>
    <string name="notification_icon_text">Notifications</string>
    <string name="message_icon_text">Chat</string>
    <string name="settings_icon_text">Settings</string>
    <string name="title_activity_new_city">NewCity</string>
    <string name="title_activity_my_city">MyCity</string>
    <string name="title_activity_sign_in">activity_sign_in</string>
    <string name="title_activity_sign_up">activity_sign_up</string>
    <string name="title_activity_who_are_you">activity_who_are_you</string>
    <string name="title_activity_what_do_you_want_to_do_today2">
        activity_what_do_you_want_to_do_today2
    </string>
    <string name="title_activity_create">activity_create</string>
    <string name="title_activity_details">activity_details</string>
    <string name="title_activity_list">ActivityListActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_notifications">ActivityNotifications</string>
    <string name="title_activity_my_status">MyStatusActivity</string>
    <string name="title_activity_new_who_are_you">NewWhoAreYouActivity</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_calendar">MyCalendarActivity</string>
    <string name="title_activity_recommend">RecommendActivity</string>
    <string name="title_activity_they_are_available">TheyAreAvailableActivity</string>
    <string name="title_activity_other_user_profile">OtherUserProfileActivity</string>
    <string name="title_activity_participants">ParticipantsActivity</string>
    <string name="title_activity_notifications_preferences">NotificationsPreferencesActivity
    </string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_points_history">PointsHistoryActivity</string>
    <string name="title_activity_points_system">PointsSystemActivity</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="title_activity_messages_open">MessagesOpenActivity</string>
    <string name="title_activity_filters">FiltersActivity</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="title_activity_message">ActivityMessage</string>
    <string name="title_activity_chat_room">ChatRoomActivity</string>
    <string name="title_activity_my_special_group">MySpecialGroup</string>
    <string name="title_activity_detail_paid_event">ActivityDetailPaidEvent</string>
    <string name="title_activity_nav_try">NavTry</string>
    <string name="title_activity_list_with_navigation_drawer">ActivityListWithNAvigationDrawer
    </string>
    <string name="title_activity_report_issue">ReportIssue</string>
    <string name="checkOnlineToast">Please turn on your wifi/data pack</string>
    <string name="submit">SUBMIT</string>
    <string name="reportIssueEdit_title">Report Issue</string>
    <string name="reportIssueToast">Report issue field is empty</string>
    <string name="reportIssueSuccessToast">Report issue message submitted successfully</string>
    <string name="reportIssueEditTextHint">Type Your Issue Here</string>
    <string name="reportIssueEditTextEmptyToast">Report Issue field is empty</string>
    <string name="notificationFragmentEmptyText">You will receive a notification when someone tries to join an activity you created</string>
    <string name="chatFragmentEmptyText">Join an activity to send a message to participants</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="title_activity_ready">ActivityReady</string>
    <string name="title_ready">Ready!</string>
    <string name="button_start">START!</string>
    <string name="ready_text1">You are now ready to start exploring FriendNGo</string>
    <string name="ready_text2">We already found events near you today.</string>
    <string name="ready_text3">Remember that you can always change your preferences on your profile and in the settings.</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_activity_create_Account">Connect with my email address</string>
    <string name="tittle_login_in">Login</string>
    <string name="login_in_reset_email_hint">Email Address</string>
    <string name="login_in_submit_login">LOGIN</string>
    <string name="login_in_green_text">my password</string>
    <string name="login_in_forgot">I forgot </string>
    <string name="login_in_create_account">Create An Account</string>
    <string name="login_in_hint_password">Password</string>
    <string name="login_in_check_box">Remember me</string>
    <string name="login_in_dialog_one">You will need to give us the phone number that you registered with your account so that we can verify your identity.</string>
    <string name="sign_in_hint_password">Password</string>
    <string name="sign_in_confirm_hint_password">Confirm Password</string>
    <string name="sign_up_tittle">Create an account</string>
    <string name="sign_up_reset_email_hint">Email Address</string>
    <string name="sign_up_hint_password">Password</string>
    <string name="sign_up_confirm_hint_password">Confirm Password</string>
    <string name="sign_up_submit">SIGN UP</string>
    <string name="sign_up_account"> account</string>
    <string name="sign_up_i_have_already">I already have an </string>
    <string name="email_reset_field_Toast">Email field is empty</string>
    <string name="sign_up_password_match_message">Passwords do not match, please try again</string>
    <string name="tittle_map">FriendNGo</string>
    <string name="dialog_verification_part_one_sub_text">You will need to verify your phone number to create a public activity. This helps us confirm your identify and secure your account.</string>
    <string name="dialog_verification_part_one_tittle_text">Hello</string>
    <string name="dialog_verification_next_button">NEXT</string>
    <string name="dialog_verification_two_tittle_text">Enter Phone Number</string>
    <string name="dialog_verification_two_text_me_button">Text Me</string>
    <string name="dialog_verification_two_text_sub_header">We will send you a one-time verification code</string>
    <string name="dialog_verification_two_phone_number_hint">Phone Number</string>
    <string name="dialog_verification_two_phone_empty_message">Some number field is empty</string>
    <string name="dialog_verification_three_tittle_text">Enter Your Code</string>
    <string name="dialog_verification_three_text_sub_header_one">We just sent a text message to</string>
    <string name="dialog_verification_three_text_sub_header_two">with a code for you to enter here</string>
    <string name="dialog_verification_three_code_hint">Code</string>
    <string name="dialog_verification_three_submit_button">Submit</string>
    <string name="dialog_verification_three_code_empty_message">Code number field is empty</string>
    <string name="dialog_verification_three_code_error_message">Entered code was incorrect</string>
    <string name="dialog_verification_four_tittle_text">Enter Your Code</string>
    <string name="dialog_verification_four_text_sub_header_one">We just sent a text message to</string>
    <string name="dialog_verification_four_text_sub_header_two">with a code for you to enter here</string>
    <string name="dialog_verification_four_code_hint">Code</string>
    <string name="dialog_verification_four_submit_button">Submit</string>
    <string name="dialog_verification_four_empty_message">Some field are empty</string>
    <string name="dialog_verification_four_code_error_message">Entered code was incorrect</string>
    <string name="dialog_verification_four_phone_error_message">Invalid phone number</string>
    <string name="dialog_verification_four_hint_password">Password</string>
    <string name="dialog_verification_four_hint_password_confirm">Confirm Password</string>
    <string name="dialog_verification_four_password_match_message">Passwords do not match, please try again</string>
    <string name="about_us_title">A propos de nous</string>
    <string name="about_us_privacy_policy">Privacy Policy</string>
    <string name="about_us_terms_and_conditions">Terms and Conditions</string>
    <string name="chat_room_title">My Activity Name</string>
    <string name="chat_room_cancel">Annulé</string>
    <string name="chat_room_Type_a_new_message_hint">Type a new message</string>
    <string name="create_activity_title">Create a new activity</string>
    <string name="create_activity_cancel">Cancel</string>
    <string name="create_activity_activity_name_title">Activity name</string>
    <string name="create_activity_activity_name_hint">Example: Running</string>
    <string name="create_activity_Category">Category</string>
    <string name="create_activity_activity_type_title">Activity Type</string>
    <string name="create_activity_date_title">Date</string>
    <string name="create_activity_starting_time_title">Starting Time</string>
    <string name="create_activity_estimated_end_time_title">Estimated end time</string>
    <string name="create_activity_description_of_the_activity_title">Description of the activity</string>
    <string name="Special_Group_sub_title_one">You are already part of the following group</string>
    <string name="Special_Group_sub_title_two">Do you have a code for a special group in the app?</string>
    <string name="Special_Group_edit_text_hint">Type The Code Here</string>
    <string name="Special_Group_button_save">Save</string>
    <string name="dialog_six_button_no">No</string>
    <string name="dialog_six_button_yes">Yes</string>
    <string name="dialog_six_subtitle">Would you like to give us feedback in order to help us improve the app</string>
</resources>