<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/navigation_bar_menu">
        <item
            android:id="@+id/home_icon"
            android:enabled="true"
            android:icon="@drawable/home_grey"
            android:title="@string/home_icon_text"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/calendar_icon"
            android:enabled="true"
            android:icon="@drawable/calendar"
            android:title="@string/calendar_icon_text"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/notification_icon"
            android:enabled="true"
            android:icon="@drawable/notifications"
            android:title="@string/notification_icon_text"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/message_icon"
            android:enabled="true"
            android:icon="@drawable/chat"
            android:title="@string/message_icon_text"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/settings_icon"
            android:enabled="true"
            android:icon="@drawable/settings"
            android:title="@string/settings_icon_text"
            app:showAsAction="ifRoom" />
</menu>