<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/whiteish"
    tools:context="com.friendngo.friendngo.SignIn"
    tools:showIn="@layout/activity_sign_in">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/login_email"
        android:textColor="@color/textInput"
        android:background="@android:color/white"
        android:hint="@string/login_in_reset_email_hint"
        android:padding="15dp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="7dp" />

    <Button
        android:text="@string/login_in_submit_login"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/signin_button"
        android:layout_width="160dp"
        android:textColor="@android:color/white"
        android:background="@drawable/submit_button"
        android:layout_marginBottom="15dp" />

    <TextView
        android:id="@+id/forgot_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/forgot_text"
        android:layout_alignBottom="@+id/forgot_text"
        android:layout_marginLeft="4dp"
        android:layout_toEndOf="@+id/forgot_text"
        android:layout_toRightOf="@+id/forgot_text"
        android:clickable="true"
        android:text="@string/login_in_green_text"
        android:textColor="@color/colorAccent" />

    <TextView
        android:text="@string/login_in_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_text"
        android:textColor="@color/textInput"
        android:layout_marginTop="51dp"
        android:layout_marginLeft="18dp"
        android:layout_below="@+id/login_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="18dp" />

    <TextView
        android:text="@string/login_in_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_account_link"
        android:clickable="true"
        android:textColor="@color/colorAccent"
        android:layout_above="@+id/signin_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/login_password"
        android:textColor="@color/textInput"
        android:background="@android:color/white"
        android:hint="@string/login_in_hint_password"
        android:backgroundTint="@android:color/white"
        android:layout_below="@+id/login_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="15dp" />

    <CheckBox
        android:id="@+id/checkBoxRememberME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/forgot_link"
        android:layout_alignLeft="@+id/forgot_text"
        android:layout_alignStart="@+id/forgot_text"
        android:text="@string/login_in_check_box"
        android:textColor="@color/textInput" />

</RelativeLayout>
