<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_verification_four_tittle_text"
        android:gravity="center"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/dialog_verification_sub_title"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_verification_four_text_sub_header_one"
        android:gravity="center"
        android:textSize="16sp"/>
    <RelativeLayout
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/dialog_verification_four_code_hint"
        android:inputType="number"
        android:ems="10"
        android:paddingLeft="15dp"
        android:background="@drawable/edit_text_dialog"
        android:layout_marginTop="3dp"
        android:drawableRight="@android:drawable/ic_menu_edit"
        android:id="@+id/dialog_verification_four_edit_code"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
    <RelativeLayout
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/dialog_verification_four_hint_password"
            android:inputType="number"
            android:ems="10"
            android:paddingLeft="15dp"
            android:background="@drawable/edit_text_dialog"
            android:layout_marginTop="3dp"
            android:drawableRight="@android:drawable/ic_menu_edit"
            android:id="@+id/dialog_verification_four_password"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/dialog_verification_four_hint_password_confirm"
            android:inputType="number"
            android:ems="10"
            android:paddingLeft="15dp"
            android:background="@drawable/edit_text_dialog"
            android:layout_marginTop="3dp"
            android:drawableRight="@android:drawable/ic_menu_edit"
            android:id="@+id/dialog_verification_four_password_confirm"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"></FrameLayout>
    <Button
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="5dp"
        android:id="@+id/dialog_verification_four_submit"
        android:layout_gravity="center"
        android:text="@string/dialog_verification_four_submit_button"
        android:background="@drawable/submit_button"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"></FrameLayout>
</LinearLayout>