<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/dialog_verification_part_one_tittle_text"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/dialog_sub_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/dialog_verification_part_one_sub_text"
        android:textSize="16sp" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"></FrameLayout>
    <Button
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@drawable/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_verification_next_button"
        android:layout_marginBottom="200dp"
        android:textColor="@color/white"
        android:layout_margin="5dp"
        android:id="@+id/dialog_next_button"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"></FrameLayout>
</LinearLayout>
