<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/dialog_six_subtitle"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"></FrameLayout>
<LinearLayout
    android:weightSum="1"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/dialog_six_no"
        android:layout_weight="0.5"
        android:text="@string/dialog_six_button_no"
        android:gravity="center_horizontal"
        android:textColor="@color/no"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <TextView
        android:id="@+id/dialog_six_yes"
        android:layout_weight="0.5"
        android:text="@string/dialog_six_button_yes"
        android:gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"></FrameLayout>

</LinearLayout>
