<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_verification_two_tittle_text"
        android:gravity="center"
        android:textSize="20sp"/>

    <TextView
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_verification_two_text_sub_header"
        android:gravity="center"
        android:textSize="16sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <EditText
            android:id="@+id/dialog_verification_two_country_code_edit_text"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/edit_text_dialog"
            android:ems="10"
            android:hint="+1"
            android:inputType="phone"
            android:maxLength="4"
            android:padding="5dp" />

        <EditText
            android:id="@+id/dialog_verification_two_text_me_edit_text"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/edit_text_dialog"
            android:drawableRight="@android:drawable/ic_menu_edit"
            android:ems="10"
            android:hint="@string/dialog_verification_two_phone_number_hint"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="5dp" />

    </RelativeLayout>

    <Button
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="5dp"
        android:id="@+id/dialog_verification_two_text_me"
        android:layout_gravity="center"
        android:text="@string/dialog_verification_two_text_me_button"
        android:background="@drawable/submit_button"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"></FrameLayout>
</LinearLayout>
