<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteish"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.friendngo.friendngo.ActivityReady"
    tools:showIn="@layout/activity_ready">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_above="@+id/start_ready_button">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">
            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:text="@string/ready_text1" />
            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:layout_below="@+id/textView10"
                android:layout_centerHorizontal="true"
                android:text="@string/ready_text2" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/settings" />
            <TextView
                android:id="@+id/textView12"
                android:layout_below="@id/imageView2"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/ready_text3" />
        </RelativeLayout>

    </LinearLayout>


    <Button
        android:text="@string/button_start"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"

        android:id="@+id/start_ready_button"
        android:layout_margin="5dp"
        android:background="@drawable/submit_button"/>




</RelativeLayout>
